--- a/css/formstyle.css
+++ b/css/formstyle.css
@@ -5,7 +5,7 @@
     
     .header {
         padding: 15px 0;
-        background-color: rgb(255, 250, 250);
+        background-color: #ffffff;
     }
     
     .header-content {
